    source instead of the current postgresql-X.Y source. This behaves better
    with backports. Thanks to Christoph Berg for the suggestion.
  * debian/postgresql-common.lintian-overrides: Don't complain about missing
    manpage for pg_config, it's shipped by libpq-dev.
  * debian/control: Update description of the metapackages to actually say
    "metapackage" to quiesce lintian.

  [ Peter Eisentraut ] 
  * pg_createcluster:
    - Use "peer" instead of "ident" on local socket connections from 9.1 on.
    - Apply pg_hba.conf adjustments to replication connections as well.
    - (Closes: #632702)

 -- Martin Pitt <mpitt@debian.org>  Thu, 25 Aug 2011 14:19:06 +0200

postgresql-common (120) unstable; urgency=low

  * PgCommon.pm, cluster_info(): Do not consider external_pid_file
    configuration as valid if it is '(none)'. Fixes test suite regression in
    version 119.
  * debian/supported-versions: Switch to 9.1 as default and testing/unstable
    supported version. This will also cause -server-dev-all to only pull in
    -9.1.
  * PgCommon.pm: Partially revert changes for #606336: postmaster does not
    clean up the PID file when it stops, and it is not world readable, so only
    its absence is a definitive result. If the PID file is present, do the
    port probe to check if it is really running.

 -- Martin Pitt <mpitt@debian.org>  Tue, 23 Aug 2011 14:05:09 +0200

postgresql-common (119) unstable; urgency=low

  [ Martin Pitt ]
  * PgCommon.pm, set_conf_value(): Fix the case where a key exists first as a
    commented value, and then uncommented. Add appropriate test cases to
    t/005_PgCommon.t. (Closes: #539651)
  * debian/postgresql-common.postgresql.init: Fix "status" command when some
    clusters are down. (Closes: #635594)
  * pg_upgradecluster: Only call pg_ctl with the -t option with old clusters
    >= 8.4, as earlier versions do not yet support it. (Closes: #633801)
  * debian/postgresql-common.postinst: Remove some obsolete transition