@@ -1,7 +1,8 @@
 #!/usr/bin/make -f
 
 POD2MAN=pod2man --center "Debian PostgreSQL infrastructure" -r "Debian"
-POD1PROGS=pg_wrapper pg_lsclusters pg_buildext
+POD1PROGS=pg_wrapper pg_lsclusters
+POD1PROGS_POD=pg_buildext
 POD8PROGS=pg_ctlcluster pg_createcluster pg_dropcluster pg_upgradecluster pg_updatedicts
 DEFAULT_VER=$(shell debian/supported-versions | sort -r | head -n 1)
 
@@ -12,6 +13,7 @@ override_dh_install:
 	dh_install
 	install -m 644 -D debian/postgresql-common.sysctl debian/postgresql-common/etc/sysctl.d/30-postgresql-shm.conf
 	for p in $(POD1PROGS); do $(POD2MAN) --quotes=none --section 1 $$p > $$p.1; done
+	for p in $(POD1PROGS_POD); do $(POD2MAN) --quotes=none --section 1 $$p.pod > $$p.1; done
 	for p in $(POD8PROGS); do $(POD2MAN) --quotes=none --section 8 $$p > $$p.8; done
 
 override_dh_installinit:
@@ -30,5 +32,5 @@ override_dh_gencontrol:
 
 override_dh_clean:
 	dh_clean
-	for p in $(POD1PROGS); do rm -f $$p.1; done
+	for p in $(POD1PROGS) $(POD1PROGS_POD); do rm -f $$p.1; done
 	for p in $(POD8PROGS); do rm -f $$p.8; done
